# SenseVid

./: CMakeLists.txt  LICENSE_SENSEVID  MODIFICATIONS.md  README.md
src/: dct.cc  energy.h  entropy.cc  huffman.h  mainFrame.cc  mainFrame.h  parameters.cc  secondFrame.cc  secondFrame.h  sensevid.cc  sensevid.h  trace.h  utils.cc  utils.h  video.cc
videos/: flower_qcif.avi
